--- a/common/net/CMakeLists.txt
+++ b/common/net/CMakeLists.txt
@@ -5,3 +5,5 @@ file(GLOB SOURCES "src/*.cpp" "src/**/*.cpp" "src/*.h" "src/**/*.h")
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src)
+
+add_subdirectory(tests)
