--- a/common/net/tests/CMakeLists.txt
+++ b/common/net/tests/CMakeLists.txt
@@ -3,9 +3,9 @@ project(common-test VERSION 1.0)
 
 enable_testing()
 
-add_executable(${PROJECT_NAME} db-test.cpp)
+add_executable(${PROJECT_NAME} common_test.cpp)
 
-target_link_libraries(${PROJECT_NAME} GTest::gmock_main)
+target_link_libraries(${PROJECT_NAME} GTest::gtest_main GTest::gmock_main)
 
 include(GoogleTest)
 gtest_discover_tests(${PROJECT_NAME})
