--- a/client/app/tests/CMakeLists.txt
+++ b/client/app/tests/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.24)
 project(ClientAppTests VERSION 1.0)
 
-enable_testing()
+set(SOURCES tests.cpp)
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
-add_executable(${PROJECT_NAME} tests.cpp)
-
-target_link_libraries(${PROJECT_NAME} ${MathLib_LIBRARY_DIRS} GTest::gtest_main GTest::gmock_main)
-target_include_directories(${PROJECT_NAME} PRIVATE ${MathLib_INCLUDE_DIRS})
+add_executable(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} GTest::gtest_main GTest::gmock_main)
+target_link_libraries(${PROJECT_NAME} MathLib)
 
 include(GoogleTest)
 gtest_discover_tests(${PROJECT_NAME})
 
 if(MSVC)
-    set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Client/App/Tests")
+    set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Client/App")
 endif()
