--- a/client/engine/tests/CMakeLists.txt
+++ b/client/engine/tests/CMakeLists.txt
@@ -3,13 +3,16 @@ project(ClientEngineTests VERSION 1.0)
 
 enable_testing()
 
-add_executable(${PROJECT_NAME} tests.cpp)
+set(SOURCES tests.cpp)
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
+add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} GTest::gtest_main GTest::gmock_main)
+target_link_libraries(${PROJECT_NAME} ClientEngine)
 
 include(GoogleTest)
 gtest_discover_tests(${PROJECT_NAME})
 
 if(MSVC)
-    set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Client/Engine/Tests")
+    set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Client/Engine")
 endif()
