Added forgotten 'add_subdirectory' for tests and removed GLOB in common

--- a/server/room/CMakeLists.txt
+++ b/server/room/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.24)
 project(dnd-room VERSION 1.0)
 
+add_subdirectory(tests)
+
 file(GLOB SOURCES "src/*.cpp" "src/**/*.cpp" "src/*.h" "src/**/*.h")
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
