--- a/server/db/CMakeLists.txt
+++ b/server/db/CMakeLists.txt
@@ -3,5 +3,7 @@ project(dnd-db VERSION 1.0)
 
 file(GLOB SOURCES "src/*.cpp" "src/**/*.cpp" "src/*.h" "src/**/*.h")
 
+add_subdirectory(tests)
+
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src)
