--- a/server/room/CMakeLists.txt
+++ b/server/room/CMakeLists.txt
@@ -3,7 +3,7 @@ project(dnd-room VERSION 1.0)
 
 add_subdirectory(tests)
 
-file(GLOB SOURCES "src/*.cpp" "src/**/*.cpp" "src/*.h" "src/**/*.h")
+set(SOURCES "src/main.cpp")
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src)
