--- a/common/logic/CMakeLists.txt
+++ b/common/logic/CMakeLists.txt
@@ -4,6 +4,10 @@ project(dnd-logic VERSION 1.0)
 set(SOURCES "src/GameEntity.cpp")
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
-target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(${PROJECT_NAME} PUBLIC
+    ${PROJECT_SOURCE_DIR}/include/activatable
+    ${PROJECT_SOURCE_DIR}/include/base
+    ${PROJECT_SOURCE_DIR}/include/character
+    ${PROJECT_SOURCE_DIR}/include/items)
 
 add_subdirectory(tests)
