Almost done with carcass

--- a/common/logic/CMakeLists.txt
+++ b/common/logic/CMakeLists.txt
@@ -1,13 +1,21 @@
 cmake_minimum_required(VERSION 3.24)
 project(dnd-logic VERSION 1.0)
 
-set(SOURCES "src/GameEntity.cpp")
+set(SOURCES
+     src/GameEntity.cpp
+     src/CharacterInstance.cpp
+     src/GameMap.cpp
+     src/Location.cpp
+     src/OnLocation.cpp
+     src/TurnOrder.cpp)
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
+
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${PROJECT_SOURCE_DIR}/include/activatable
     ${PROJECT_SOURCE_DIR}/include/base
     ${PROJECT_SOURCE_DIR}/include/character
-    ${PROJECT_SOURCE_DIR}/include/items)
+    ${PROJECT_SOURCE_DIR}/include/items
+    ${PROJECT_SOURCE_DIR}/include/structure)
 
 add_subdirectory(tests)
