--- a/common/net/tests/CMakeLists.txt
+++ b/common/net/tests/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.24)
-project(common-test VERSION 1.0)
+project(net-test VERSION 1.0)
 
 enable_testing()
 
-add_executable(${PROJECT_NAME} common_test.cpp)
+add_executable(${PROJECT_NAME} net_test.cpp)
 
 target_link_libraries(${PROJECT_NAME} GTest::gtest_main GTest::gmock_main)
 
