--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Run linters
         run: cd build && make check
 
-  logic-tests:
+  tests:
     runs-on: ubuntu-latest
     container: reddir666/dnd-pqxx-gtest
     needs: [build]
@@ -67,4 +67,16 @@ jobs:
 
       - name: Run client unit tests
         working-directory: ./build/common/logic/tests
+        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
+
+      - name: Run client unit tests
+        working-directory: ./build/client/engine/tests
+        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
+
+      - name: Run client integration tests
+        working-directory: ./build/client/app/tests
+        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
+
+      - name: Run server tests
+        working-directory: ./build/server/tests
         run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
