--- a/client/app/CMakeLists.txt
+++ b/client/app/CMakeLists.txt
@@ -13,8 +13,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE ClientEngine)
 add_subdirectory(vendor/mathlib)
 add_subdirectory(tests)
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/res/Shaders/Simple.vert ${CMAKE_CURRENT_BINARY_DIR}/res/Shaders/Simple.vert COPYONLY)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/res/Shaders/Simple.frag ${CMAKE_CURRENT_BINARY_DIR}/res/Shaders/Simple.frag COPYONLY)
+file(CREATE_LINK ${CMAKE_SOURCE_DIR}/ClientRes ${CMAKE_CURRENT_BINARY_DIR}/ClientRes SYMBOLIC)
 
 if(MSVC)
     set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Client/App")
