Added move constructors and deleted some of the copy constructors, implemented switchLocation

--- a/common/logic/CMakeLists.txt
+++ b/common/logic/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
      src/base/Dice.cpp
      src/base/GameEntity.cpp
      src/character/OnLocation.cpp
+     src/character/Character.cpp
      src/character/CharacterInstance.cpp
      src/character/PlayerCharacter.cpp
      src/character/NPC_Instance.cpp
