--- a/common/net/CMakeLists.txt
+++ b/common/net/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.24)
 project(dnd-net VERSION 1.0)
 
-set(SOURCES "src/main.cpp")
+set(SOURCES src/Buffer.cpp
+            src/WebSocketStream.cpp
+            src/WebSocketConnection.cpp
+            src/EventLoop.cpp
+            )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
-target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src)
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src)
 
 add_subdirectory(tests)
