--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+
 option(BUILD_CLIENT "Build Client" ON)
 option(BUILD_SERVER "Build Server" ON)
 
@@ -53,7 +55,7 @@ set(ERROR_FLAGS "-Wall")
 if(MSVC)
 	set(ERROR_FLAGS "${ERROR_FLAGS} -W4")
 else()
-	set(ERROR_FLAGS "${ERROR_FLAGS} -Wpedantic -Werror")
+	set(ERROR_FLAGS "${ERROR_FLAGS} -Wpedantic")
 endif()
 
 option(SANITIZE "Enable sanitizers" ON)
@@ -66,7 +68,7 @@ if (${DEBUG})
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 endif()
 
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ERROR_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ERROR_FLAGS}")
 
 add_custom_target(check chmod 777 ${CMAKE_SOURCE_DIR}/lint.sh && ${CMAKE_SOURCE_DIR}/lint.sh)
 
