--- a/client/engine/CMakeLists.txt
+++ b/client/engine/CMakeLists.txt
@@ -83,7 +83,13 @@ add_library(${PROJECT_NAME} STATIC)
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_link_libraries(${PROJECT_NAME} ClientRequestor)
-target_link_libraries(${PROJECT_NAME} glm glfw glew ImGui opengl32)
+target_link_libraries(${PROJECT_NAME} glm glfw glew ImGui)
+
+if(MSVC)
+    target_link_libraries(${PROJECT_NAME} opengl32)
+else()
+    target_link_libraries(${PROJECT_NAME} GL)
+endif()
 
 if (${BUILD_LOGIC})
     add_definitions(-DBUILD_LOGIC) 
