--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Unpack build folder
         run: tar -xzf build.tar.gz
 
-      - name: Run client unit tests
+      - name: Run logic module tests
         working-directory: ./build/common/logic/tests
         run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
 
