--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -3,6 +3,11 @@ project(Client VERSION 1.0)
 
 option(BUILD_LOGIC "GLFW_BUILD_DOCS" ON)
 
+if(MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+    message(STATUS ${CMAKE_CXX_FLAGS})
+endif()
+
 add_subdirectory(app)
 add_subdirectory(engine)
 add_subdirectory(requestor)
