--- a/client/requestor/CMakeLists.txt
+++ b/client/requestor/CMakeLists.txt
@@ -17,7 +17,10 @@ endif()
 add_library(${PROJECT_NAME} STATIC)
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(${PROJECT_NAME} dnd-logic)
+
+if (${BUILD_LOGIC})
+    target_link_libraries(${PROJECT_NAME} dnd-logic)
+endif()
 
 if(MSVC)
     set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Client/Engine/deps")
