--- a/common/requests/CMakeLists.txt
+++ b/common/requests/CMakeLists.txt
@@ -15,18 +15,23 @@ set(SOURCES
     src/RoomProcessorEngine.cpp
     src/RoomRequestProcessor.cpp
     src/StringRequestParser.cpp
+        ../../client/requestor/Actions/MoveAction.cpp
+        ../../client/requestor/Actions/UseActions.cpp
+    ../../client/requestor/Actions/Actions.h
 )
 
 find_package(nlohmann_json 3.11.1 REQUIRED)
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 
-target_link_libraries(${PROJECT_NAME} nlohmann_json::nlohmann_json)
+target_link_libraries(${PROJECT_NAME} GTest::gmock_main nlohmann_json::nlohmann_json
+        dnd-logic)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${PROJECT_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}/common/requests/include
     ${PROJECT_SOURCE_DIR}/interfaces
-
+    ${PROJECT_SOURCE_DIR}/../client/requestor/Actions
 )
 
 
