--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
 project(dnd-common VERSION 1.0)
 
+add_subdirectory(logic)
 add_subdirectory(net)
 add_subdirectory(requests)
 
