Fixed demo game state

--- a/common/logic/tests/CMakeLists.txt
+++ b/common/logic/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(${PROJECT_NAME}
     src/effects-tests.cpp
     src/single-tests.cpp
     src/action-tests.cpp
+    src/demo-tests.cpp
     src/turn-order-tests.cpp
     src/location-tests.cpp)
 
