--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
 project(dnd-server VERSION 1.0)
 
+add_subdirectory(crypto)
 add_subdirectory(db)
 add_subdirectory(room)
 add_subdirectory(gateway)
@@ -12,5 +13,6 @@ target_link_libraries(${PROJECT_NAME} PRIVATE dnd-gateway)
 target_link_libraries(${PROJECT_NAME} PRIVATE pqxx)
 target_link_libraries(${PROJECT_NAME} PRIVATE dnd-net)
 target_link_libraries(${PROJECT_NAME} PRIVATE dnd-db)
+target_link_libraries(${PROJECT_NAME} PRIVATE dnd-crypto)
 
 add_subdirectory(tests)
