--- a/server/gateway/CMakeLists.txt
+++ b/server/gateway/CMakeLists.txt
@@ -3,6 +3,7 @@ project(dnd-gateway VERSION 1.0)
 
 set(SOURCES src/user/UserConnectionImpl.cpp
             src/user/Authorizer.cpp
+            src/user/DBAuthorizer.cpp
             src/user/Acceptor.cpp
             src/user/User.cpp
             src/room/RoomImpl.cpp
@@ -19,4 +20,4 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src
                                                   ${PROJECT_SOURCE_DIR}/src/managers
                                                   ${PROJECT_SOURCE_DIR}/src/imageStorage)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE dnd-net dnd-db dnd-room)
+target_link_libraries(${PROJECT_NAME} PRIVATE dnd-net dnd-db dnd-room dnd-crypto pqxx)
